modules/sg/sg_cicd.tf
# -----------------------------
# Security Group for CI/CD
# -----------------------------
resource "aws_security_group" "tf_cicd_sg" {
  name        = "tf-cicd-sg"
  description = "CI/CD Security Group"
  vpc_id      = var.vpc_id

  # SSH
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Jenkins (8080–8081)
  ingress {
    description = "Jenkins UI"
    from_port   = 8080
    to_port     = 8081
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound (allow all)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "public-cicd-ec2-sg"
    Environment = var.environment
  }
}
